--- a/angular-web-app/src/app/components/_pages/home/home.component.html
+++ b/angular-web-app/src/app/components/_pages/home/home.component.html
@@ -5,10 +5,7 @@
   <!-- Services -->
   <section *ngIf="services.active" class="page-section bg-light">
     <div class="container">
-      <app-section-title 
-        [title]="services.title"
-        [subTitle]="services.subTitle" 
-        [text]="services.text">
+      <app-section-title [title]="services.title" [subTitle]="services.subTitle" [text]="services.text">
       </app-section-title>
       <div class="row">
         <div *ngFor="let service of services.services" class="col-lg-4 col-md-6 col-sm-12">
@@ -22,18 +19,13 @@
   <!-- Featured -->
   <section *ngIf="featured.active" class="page-section">
     <div class="container">
-      <app-section-title 
-        [title]="featured.title"
-        [subTitle]="featured.subTitle"
-        [text]="featured.text">
+      <app-section-title [title]="featured.title" [subTitle]="featured.subTitle" [text]="featured.text">
       </app-section-title>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <app-painting-card 
-            [painting]="featured.painting"
-            [maxHeight]="featured.maxHeight">
+          <app-painting-card [painting]="featured.painting" [maxHeight]="featured.maxHeight">
           </app-painting-card>
         </div>
       </div>
@@ -41,12 +33,9 @@
   </section>
 
   <!-- Latest News -->
-  <section *ngIf="latestNews.active"  class="page-section bg-light">
+  <section *ngIf="latestNews.active" class="page-section bg-light">
     <div class="container">
-      <app-section-title 
-        [title]="latestNews.title"
-        [subTitle]="latestNews.subTitle"
-        [text]="latestNews.text"
+      <app-section-title [title]="latestNews.title" [subTitle]="latestNews.subTitle" [text]="latestNews.text"
         [link]="latestNews.link">
       </app-section-title>
       <div class="row">
@@ -60,10 +49,7 @@
   <!-- Latest paintings -->
   <section *ngIf="latestWork.active" class="page-section">
     <div class="container">
-      <app-section-title
-        [title]="latestWork.title"
-        [subTitle]="latestWork.subTitle"
-        [text]="latestWork.text"
+      <app-section-title [title]="latestWork.title" [subTitle]="latestWork.subTitle" [text]="latestWork.text"
         [link]="latestWork.link">
       </app-section-title>
       <div class="row">
@@ -78,10 +64,7 @@
   <section *ngIf="cta.active" class="page-section" [style.backgroundImage]="'url(' + cta.image + ')'">
     <div class="container">
       <div class="col-12">
-        <app-call-to-action
-          [title]="cta.title"
-          [subTitle]="cta.subTitle"
-          [buttonText]="cta.btnText"
+        <app-call-to-action [title]="cta.title" [subTitle]="cta.subTitle" [buttonText]="cta.btnText"
           [buttonLink]="cta.btnLink">
         </app-call-to-action>
       </div>
