--- a/angular-web-app/src/app/components/painting-card/painting-card.component.html
+++ b/angular-web-app/src/app/components/painting-card/painting-card.component.html
@@ -13,7 +13,7 @@
       <button mat-fab color="accent" class="mx-2" aria-label="Show image" (click)="openImage(content)">
         <mat-icon>search</mat-icon>
       </button>
-      <button mat-fab color="accent" class="mx-2" aria-label="Show details" (click)="goToPaintingDetails(painting.key)">
+      <button mat-fab color="accent" class="mx-2" aria-label="Show details" (click)="goToPaintingDetails(painting.id)">
         <mat-icon>more_horiz</mat-icon>
       </button>
     </div>
