--- a/angular-web-app/src/app/components/_layout/footer/footer.component.html
+++ b/angular-web-app/src/app/components/_layout/footer/footer.component.html
@@ -15,9 +15,9 @@
           <p>{{ footerContent.socialText }}</p>
           <ul class="list-inline">
             <!-- facebook, twitter, instagram -->
-            <li class="list-inline-item"><a href="{{ footerContent.facebookLink }}" target="blank"><img class="social-icon" src="../../../../assets/img/icons/facebook.png" alt=""></a></li>
-            <li class="list-inline-item"><a href="{{ footerContent.twitterLink }}" target="blank"><img class="social-icon" src="../../../../assets/img/icons/twitter.png" alt=""></a></li>
-            <li class="list-inline-item"><a href="{{ footerContent.instagramLink }}" target="blank"><img class="social-icon" src="../../../../assets/img/icons/instagram.png" alt=""></a></li>
+            <li class="list-inline-item"><a [href]="footerContent.facebookLink" target="blank"><img class="social-icon" src="../../../../assets/img/icons/facebook.png" alt=""></a></li>
+            <li class="list-inline-item"><a [href]="footerContent.twitterLink" target="blank"><img class="social-icon" src="../../../../assets/img/icons/twitter.png" alt=""></a></li>
+            <li class="list-inline-item"><a [href]="footerContent.instagramLink" target="blank"><img class="social-icon" src="../../../../assets/img/icons/instagram.png" alt=""></a></li>
           </ul>
         </div>
 
