--- a/angular-web-app/src/app/components/carousel-img/carousel-img.component.html
+++ b/angular-web-app/src/app/components/carousel-img/carousel-img.component.html
@@ -30,7 +30,7 @@
       <div class="row">
         <div class="col-12">
           <div class="d-flex align-items-center justify-content-center">
-            <img class="img-modal" src="{{ modalImage }}" alt="" />
+            <img class="img-modal" [src]="modalImage" alt="" />
           </div>
         </div>
       </div>
