--- a/angular-web-app/src/styles.scss
+++ b/angular-web-app/src/styles.scss
@@ -77,12 +77,6 @@ button::-moz-focus-inner {
   }
 }
 
-@media (max-width: 575px) {
-  .shuffle-container .row > [class*="col-"] {
-    padding-left: 8px !important;
-    padding-right: 8px !important;
-  }
-}
 
 /*************************************/
 /**            Sections             **/
@@ -400,7 +394,7 @@ hr.divider {
   display: flex;
   min-height: min-content;
   height: 100%;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .simplebar-scrollbar::before {
