--- a/angular-web-app/src/app/components/contact-card/contact-card.component.html
+++ b/angular-web-app/src/app/components/contact-card/contact-card.component.html
@@ -51,7 +51,7 @@
             <button mat-raised-button color="accent" type="submit" class="mr-3" [disabled]="!contactForm.form.valid">
               Verstuur
             </button>
-            <button mat-raised-button color="primary" type="button" (click)="resetForm(); contactForm.reset()">
+            <button mat-raised-button color="primary" type="button" (click)="resetForm();">
               Reset
             </button>
 
