--- a/angular-web-app/src/app/components/_pages/portfolio/portfolio.component.html
+++ b/angular-web-app/src/app/components/_pages/portfolio/portfolio.component.html
@@ -1,4 +1,3 @@
-
 <!-- Header small -->
 <app-header [title]="pageTitle.title" [subTitle]="pageTitle.subTitle" [small]="true"></app-header>
 
@@ -9,11 +8,7 @@
   <section class="page-section bg-light">
 
     <div class="container">
-      <app-section-title
-        [title]="galleryContent.title"
-        [subTitle]="galleryContent.subTitle"
-        [text]="galleryContent.text"
-      ></app-section-title>
+      <app-section-title [title]="galleryContent.title" [subTitle]="galleryContent.subTitle" [text]="galleryContent.text"></app-section-title>
 
       <!-- Gallery -->
       <app-gallery [maxHeight]="galleryContent.maxHeight"></app-gallery>
@@ -22,4 +17,3 @@
   </section>
 
 </main>
-
