--- a/angular-web-app/src/app/components/_admin/painting-overview/painting-overview.component.html
+++ b/angular-web-app/src/app/components/_admin/painting-overview/painting-overview.component.html
@@ -70,7 +70,7 @@
                   <button mat-icon-button color="accent" class="mr-2">
                     <mat-icon>edit</mat-icon>
                   </button>
-                  <button mat-icon-button color="primary" (click)="deletePainting(painting.key)">
+                  <button mat-icon-button color="primary" (click)="deletePainting(painting.id)">
                     <mat-icon>delete</mat-icon>
                   </button>
                 </td>
