--- a/angular-web-app/src/variables.scss
+++ b/angular-web-app/src/variables.scss
@@ -1,3 +1,7 @@
+:root {
+  --animate-duration: 400ms !important;
+}
+
 $color-primary: #945D60;
 $color-secondary: #626E60;
 $color-accent: #AF473C;
