--- a/angular-web-app/src/styles.scss
+++ b/angular-web-app/src/styles.scss
@@ -70,13 +70,25 @@ button::-moz-focus-inner {
 .img-thumbnail-option.selected {
   & img {
     border-color: $color-green;
-    box-shadow: 0px 5px 5px -3px rgb(0 0 0 / 20%), 0px 8px 10px 1px rgb(0 0 0 / 14%), 0px 3px 14px 2px rgb(0 0 0 / 12%) !important;
+    box-shadow: 0px 5px 5px -3px rgb(0 0 0 / 20%),
+      0px 8px 10px 1px rgb(0 0 0 / 14%), 0px 3px 14px 2px rgb(0 0 0 / 12%) !important;
   }
   & .img-thumbnail-option-overlay {
     display: flex;
   }
 }
 
+.swal2-popup {
+  box-shadow: 0px 11px 15px -7px rgb(0 0 0 / 20%),
+    0px 24px 38px 3px rgb(0 0 0 / 14%), 0px 9px 46px 8px rgb(0 0 0 / 12%) !important;
+  background: white !important;
+  color: rgba(0, 0, 0, 0.87) !important;
+}
+
+.hr-news {
+  margin-top: 0.5rem !important;
+  margin-bottom: 0.5rem !important;
+}
 
 /*************************************/
 /**            Sections             **/
@@ -130,11 +142,12 @@ button::-moz-focus-inner {
   overflow: hidden;
   padding-right: 17px;
 }
-
+.swal2-shown #mainNav,
 .cdk-global-scrollblock #mainNav {
   right: 17px;
 }
 
+.swal2-shown #site-footer,
 .cdk-global-scrollblock #site-footer {
   padding-right: 17px;
 }
